more speedups for bug 28964. Check for .xpt at end of filename before checking to see if the thing is a file or dir because the name check is way faster than the isDir check - if the name check fails then we don't have to even do the isDir check. r=dp, a=jar